--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriChart</title>
-    <!-- Google Fonts - Roboto for main text, Dancing Script for handwriting -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome CDN for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" xintegrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0V4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- jsPDF CDN for PDF generation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0V4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         /* CSS Variables for Theme */
@@ -394,22 +390,17 @@
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
     <div class="container">
-        <!-- Theme Toggle Button -->
         <button id="themeToggle" aria-label="Toggle theme">
             <i class="fas fa-moon"></i>
         </button>
 
-        <!-- New wrapper for title and quote -->
         <div class="title-and-quote-group">
-            <!-- Main Title with Icon - Now Clickable -->
             <a href="#" id="nutrichartTitleLink">
                 <h1><span class="icon"><i class="fas fa-leaf"></i></span> NutriChart</h1>
             </a>
-            <!-- Quote below title -->
             <p class="quote-text">"Your daily dose of healthy insights."</p>
         </div>
 
-        <!-- Text Input for Food Name (Moved Here) -->
         <div class="text-input-group">
             <input type="text" id="foodNameInput" placeholder="Enter food name (e.g., Apple, Pizza)">
             <button id="analyzeTextBtn" class="btn btn-secondary">
@@ -417,7 +408,6 @@
             </button>
         </div>
 
-        <!-- Image Input and Camera Controls -->
         <div class="flex flex-col md:flex-row gap-4">
             <div class="flex-1 flex flex-col gap-4">
                 <input type="file" id="imageUpload" accept="image/*" class="hidden" />
@@ -452,18 +442,14 @@
                 <canvas id="cameraCanvas" class="hidden"></canvas>
                 <span id="placeholderText" class="text-gray-500 text-base">Upload or take a photo of food</span>
                 <div id="loadingOverlay" class="loading-overlay hidden">
-                    <i class="fas fa-sync-alt loading-icon"></i> <!-- New loading icon -->
-                </div>
+                    <i class="fas fa-sync-alt loading-icon"></i> </div>
             </div>
         </div>
 
-        <!-- Nutrition Chart Display -->
         <div id="nutritionResult" class="nutrition-chart hidden">
             <h2 class="text-2xl font-semibold text-gray-700 mb-4">Nutrition Information</h2>
             <div id="nutritionDetails">
-                <!-- Nutrition details will be populated here -->
-            </div>
-            <!-- Share and Download Buttons -->
+                </div>
             <div class="share-download-buttons">
                 <button id="shareBtn" class="btn btn-primary">
                     <i class="fas fa-share-alt"></i> Share
@@ -474,7 +460,6 @@
             </div>
         </div>
 
-        <!-- Footer Section -->
         <footer class="app-footer">
             <p>&copy; <span id="currentYear"></span> NutriChart. All rights reserved.</p>
         </footer>
@@ -787,14 +772,16 @@
 
         // New function to analyze food by text input
         async function analyzeTextFood(foodName) {
+            console.log(`Starting text analysis for: "${foodName}"`);
             loadingOverlay.classList.remove('hidden');
             nutritionResult.classList.add('hidden');
             nutritionDetails.innerHTML = ''; // Clear previous results
             imagePreview.classList.add('hidden'); // Hide any previous image
-            placeholderText.classList.add('hidden'); // Hide placeholder text
+            placeholderText.classList.add('hidden'); // Ensure placeholder is hidden
 
             try {
                 // 1. Generate Image based on food name
+                console.log("Attempting to generate image...");
                 const payloadImage = {
                     instances: { prompt: `photorealistic image of ${foodName}` },
                     parameters: { "sampleCount": 1 }
@@ -808,21 +795,24 @@
                     body: JSON.stringify(payloadImage)
                 });
                 const resultImage = await responseImage.json();
-                console.log("Image generation API response:", resultImage); // Log the full response
+                console.log("Image generation API raw response:", resultImage); // Log the full response
 
                 if (resultImage.predictions && resultImage.predictions.length > 0 && resultImage.predictions[0].bytesBase64Encoded) {
                     const imageUrl = `data:image/png;base64,${resultImage.predictions[0].bytesBase64Encoded}`;
                     imagePreview.src = imageUrl;
                     imagePreview.classList.remove('hidden');
+                    console.log("Image generated and displayed successfully.");
                     // Scroll to image preview first
                     imagePreview.scrollIntoView({ behavior: 'smooth', block: 'center' });
                 } else {
                     console.warn("Could not generate image for food:", foodName, resultImage);
                     imagePreview.src = 'https://placehold.co/600x300/CCCCCC/333333?text=Image+Not+Available'; // Fallback
                     imagePreview.classList.remove('hidden');
+                    alertUser("Could not generate an image for this food. Displaying placeholder.");
                 }
 
                 // 2. Get Nutrition Information
+                console.log("Attempting to get nutrition information...");
                 const promptNutrition = `Provide the nutritional information for "${foodName}" in JSON format. Include 'foodName', 'calories', 'protein', 'carbohydrates', 'fat', 'ingredients', 'servingSize', and 'vitamins' (as an array of strings, e.g., ['Vitamin C', 'Vitamin A']). If you cannot identify the food, return an empty object. Example JSON: { \"foodName\": \"Apple\", \"calories\": \"95 kcal\", \"protein\": \"0.5 g\", \"carbohydrates\": \"25 g\", \"fat\": \"0.3 g\", \"ingredients\": [\"apple\"], \"servingSize\": \"1 medium\", \"vitamins\": [\"Vitamin C\", \"Potassium\"] }`;
 
                 const payloadNutrition = {
@@ -859,7 +849,7 @@
                     body: JSON.stringify(payloadNutrition)
                 });
                 const resultNutrition = await responseNutrition.json();
-                console.log("Nutrition analysis API response:", resultNutrition); // Log the full response
+                console.log("Nutrition analysis API raw response:", resultNutrition); // Log the full response
 
                 if (resultNutrition.candidates && resultNutrition.candidates.length > 0 &&
                     resultNutrition.candidates[0].content && resultNutrition.candidates[0].content.parts &&
@@ -869,6 +859,7 @@
                     try {
                         const nutritionData = JSON.parse(jsonString);
                         currentNutritionData = nutritionData; // Store data for sharing/download
+                        console.log("Parsed Nutrition Data:", nutritionData);
                         displayNutrition(nutritionData);
                         nutritionResult.scrollIntoView({ behavior: 'smooth' }); // Auto-scroll to nutrition chart
                     } catch (parseError) {
@@ -881,10 +872,11 @@
                 }
 
             } catch (error) {
-                console.error("Error analyzing food by text:", error);
+                console.error("An error occurred during text analysis:", error);
                 alertUser("An error occurred while analyzing the food. Please try again.");
             } finally {
                 loadingOverlay.classList.add('hidden');
+                console.log("Text analysis process finished. Loading overlay hidden.");
             }
         }
 
@@ -916,6 +908,7 @@
                 nutritionDetails.innerHTML = html;
             }
             nutritionResult.classList.remove('hidden');
+            console.log("Nutrition chart displayed.");
         }
 
         // Function to format nutrition data into a readable string for sharing/downloading
