--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                     }
                 };
 
-                const apiKey = ""; // Canvas will automatically provide this
+                const apiKey = AIzaSyA1ajmkYKhaMs2e2I3nJelLrY4GPCiCLOQ; // Canvas will automatically provide this
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                 const response = await fetch(apiUrl, {
@@ -786,7 +786,7 @@
                     instances: { prompt: `photorealistic image of ${foodName}` },
                     parameters: { "sampleCount": 1 }
                 };
-                const apiKey = ""; // Canvas will automatically provide this
+                const apiKey = AIzaSyA1ajmkYKhaMs2e2I3nJelLrY4GPCiCLOQ; // Canvas will automatically provide this
                 const apiUrlImage = `https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate-002:predict?key=${apiKey}`;
 
                 const responseImage = await fetch(apiUrlImage, {
